# yamlrun

./: .gitignore  pyproject.toml
example/: main.yaml
tests/: test_yamlrun.py
yamlrun/: __main__.py  yaml.py
